--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "class-validator": "^0.14.1",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "speakeasy": "^2.0.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
