--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/speakeasy": "^2.0.10",
     "bcryptjs": "^2.4.3",
